<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgbanner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/imgbanner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/textmainheader"
        style="@style/textjudul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/textmainheader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textusername"
        style="@style/textviewsub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalmargin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/horizontalmargin"
        android:text="@string/textusername"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbanner" />
    <AutoCompleteTextView
        android:id="@+id/autoedittextusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalmargin"
        android:layout_marginEnd="@dimen/horizontalmargin"
        style="@style/editetxtsub"
        android:hint="@string/autoedittextusername_Hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textusername" />
    <TextView
        android:id="@+id/textpassword"
        style="@style/textviewsub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalmargin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontalmargin"
        android:text="@string/textpassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoedittextusername" />

    <EditText
        android:id="@+id/edittextpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalmargin"
        android:layout_marginEnd="@dimen/horizontalmargin"
        android:hint="@string/edittextpassword_Hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        style="@style/editetxtsub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpassword" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontalmargin"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/horizontalmargin"
        android:text="@string/btnlogin"
        style="@style/btnloginstyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittextpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>